cabal-version:       2.2
name:                dndgrid
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.zenhack.net/zenhack/dndgrid
-- license:
  -- GPL-2
  -- GPL-3
  -- LGPL-2.1
  -- LGPL-3
  -- AGPL-3
  -- BSD2
  -- BSD3
  -- MIT
  -- ISC
  -- MPL-2.0
  -- Apache-2.0
  -- PublicDomain
  -- AllRightsReserved

license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://git.zenhack.net/zenhack/dndgrid

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base ^>=4.13
    , containers ^>=0.6.2
    , scotty ^>=0.11.5
    , stm ^>=2.5.0
    , wai ^>=3.2.2
    , wai-websockets ^>=3.0.1
    , warp ^>=3.3.9
    , websockets ^>=0.12.7
    , zenhack-prelude ^>=0.1
  default-language:    Haskell2010

executable dndgrid
  import: shared-opts
  main-is: Main.hs
  hs-source-dirs:      src/haskell
test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
