cabal-version:       2.2
name:                dndgrid
version:             0.1.0.0
synopsis:            D&D battle grid web app
homepage: https://github.com/zenhack/dndgrid
license: Apache-2.0
license-file:        LICENSE
author:              Ian Denhardt
maintainer:          ian@zenhack.net
copyright:           2020 Ian Denhardt
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://github.com/zenhack/dndgrid

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base ^>=4.13
    , aeson ^>=1.4.6
    , async ^>=2.2.2
    , base64-bytestring ^>=1.0.0
    , bytestring ^>=0.10.10
    , containers ^>=0.6.2
    , extra ^>=1.7.1
    , heredoc ^>=0.2.0
    , safe-exceptions ^>=0.1.7
    , scotty ^>=0.11.5
    , sqlite-simple ^>=0.4.18
    , stm ^>=2.5.0
    , text ^>=1.2.4
    , wai ^>=3.2.2
    , wai-websockets ^>=3.0.1
    , warp ^>=3.3.9
    , websockets ^>=0.12.7
    , zenhack-prelude ^>=0.1
  default-language:    Haskell2010

executable dndgrid
  import: shared-opts
  main-is: Main.hs
  other-modules:
      Protocol
    , ServerLogic
    , DB
    , Sandstorm
  hs-source-dirs:      src/haskell
test-suite tests
  import: shared-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
